--- a/css/reset.css
+++ b/css/reset.css
@@ -1,25 +1,22 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
 @font-face {
-    font-family: 'Freesentation-9Black';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/Freesentation-9Black.woff2') format('woff2');
-    font-weight: 900;
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
-@font-face {
-    font-family: 'TheJamsil5Bold';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-}
-
-
 *{margin: 0; padding: 0; box-sizing: border-box;}
 ul, li{list-style: none;}
-a{text-decoration: none; color: inherit; display: inline-block;}
+a{text-decoration: none; color: inherit; display: block;}
+html,body{
+    height: 100%;
+}
+.blind{position: absolute; left: -9999px; font-size: 0;}
 
 body{
-    font-family: 'Freesentation-9Black' , 'TheJamsil5Bold', 'Black Han Sans' , "고딕";}
-table{border-collapse: collapse;}
-img{vertical-align: bottom;}
+    font-family: 'Pretendard-Regular';
+    color: #fff;
+    overflow-x: hidden;
+    /* overflow-y: hidden; */
+}
